# wisdomweaver

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pytest  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
tests/: test_database.py  test_document.py
wisdomweaver/: __init__.py  __main__.py  database.py  document.py  models.py  postprocessor.py
