[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wisdomweaver"
version = "0.3.1"
description = "Wisdom indexer and generator"
readme = "README.md"
authors = [{ name = "Martin Schröder", email = "info@swedishembedded.com" }]
license = { file = "LICENSE" }
classifiers = [
	"License :: OSI Approved :: Apache Software License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
]
keywords = ["llm", "languagemodel", "indexing"]
dependencies = [
	"torch",
	"pypdf",
	"nltk",
	"sentence_transformers",
	"qdrant_client",
	"openai",
	"guidance",
	"xformers",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
	"black",
	"bumpversion",
	"isort",
	"pip-tools",
	"pytest"
]

[project.urls]
Homepage = "https://github.com/swedishembedded/wisdomweaver"

[project.scripts]
wisdom = "wisdomweaver.__main__:main"

[tool.bumpver]
current_version = "0.3.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
	'current_version = "{version}"',
	'version = "{version}"',
]
"wisdomweaver/__init__.py" = [
	'__version__ = "{version}"',
]
